--- a/posts.html
+++ b/posts.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Assignment</title>
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
+    <style>
+      h2,
+      p::first-letter {
+        text-transform: capitalize;
+      }
+    </style>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <title>Assignment</title>
-  <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
-  <style>
-    h2,
-    p::first-letter {
-      text-transform: capitalize;
-    }
-  </style>
-</head>
+  <body>
+    <header>
+      <h1>Lorem Ipsum News</h1>
+      <p>“All the news that's fit to <em>consectetur adipiscing elit</em>”</p>
+    </header>
 
-<body>
-  <header>
-    <h1>Lorem Ipsum News</h1>
-    <p>“All the news that's fit to <em>consectetur adipiscing elit</em>”</p>
-  </header>
+    <main>
+      <!-- The following is an <article> template -->
+      <article data-post-id="1">
+        <h2></h2>
+        <aside></aside>
+        <p></p>
+      </article>
 
-  <main>
-    <!-- The following is an <article> template -->
-    
-  </main>
-
-  <script type="module" src="script.js"></script>
-</body>
-
+      <!-- The following is a <details> template -->
+      <details>
+        <summary></summary>
+        <section>
+          <header>
+            <h3>Comments</h3>
+          </header>
+          <aside>
+            <p></p>
+            <p><small></small></p>
+          </aside>
+        </section>
+      </details>
+    </main>
+    <script type="module" src="script.js"></script>
+  </body>
 </html>
