adding functions to display WIP

--- a/posts.html
+++ b/posts.html
@@ -20,7 +20,7 @@
 
     <main>
       <!-- The following is an <article> template -->
-      <article data-post-id="1">
+      <article>
         <h2></h2>
         <aside></aside>
         <p></p>
